--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write ./src"
   },
   "eslintConfig": {
     "extends": [
